--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,6 +80,10 @@ jobs:
               run: |
                   version=$(jq -r .version package.json)
                   echo "version=$version" >> $GITHUB_OUTPUT
+            - name: Delete existing tag if exists
+              run: |
+                  git tag -d v${{ steps.version.outputs.version }} || true
+                  git push --delete origin v${{ steps.version.outputs.version }} || true
             - name: Create Git tag
               run: |
                   git config --global user.name "GitHub Actions"
@@ -133,44 +137,35 @@ jobs:
                   WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
               with:
                   script: |
-                      const isHealthCheck = '${{ needs.health_check.result }}' !== 'skipped';
+                      const embed = {
+                        title: '${{ job.status }}' === 'success' 
+                          ? '✅ A new version of Pokedex Deployed' 
+                          : '❌ Build/Deployment Failed',
+                        color: '${{ job.status }}' === 'success' ? 65280 : 16711680,
+                        fields: [
+                          { name: 'Event', value: '${{ github.event_name }}', inline: true },
+                          { name: 'Repo', value: '${{ github.repository }}', inline: true },
+                          { name: 'Branch', value: '${{ steps.prepare.outputs.BRANCH }}', inline: true },
+                          { name: 'Version', value: '${{ steps.version.outputs.new_tag || 'latest' }}', inline: true },
+                          { name: 'Deploy ID', value: process.env.DEPLOY_ID || 'N/A', inline: true },
+                          { name: 'Commit', value: `[${{ steps.prepare.outputs.SHORT_SHA }}](${{ steps.prepare.outputs.COMMIT_URL }})`, inline: false },
+                          { name: 'Workflow', value: `[${{ github.workflow }}](${{ steps.prepare.outputs.WORKFLOW_URL }})`, inline: false }
+                        ],
+                        timestamp: new Date().toISOString()
+                      };
 
-                      if (isHealthCheck) {
-                        const healthy = '${{ needs.health_check.result }}' === 'success';
-                        await fetch(process.env.WEBHOOK_URL, {
-                          method: 'POST',
-                          headers: { 'Content-Type': 'application/json' },
-                          body: JSON.stringify({
-                            username: 'Pokedex Health',
-                            avatar_url: '${{ env.DISCORD_AVATAR }}',
-                            embeds: [{
-                              title: healthy ? '✅ Healthy' : '❌ Unhealthy',
-                              color: healthy ? 5763719 : 15548997,
-                              fields: [
-                                { name: 'Status', value: '${{ needs.health_check.outputs.status_code }}', inline: true },
-                                { name: 'Response Time', value: '${{ needs.health_check.outputs.response_time }}s', inline: true },
-                                { name: 'Version', value: '${{ steps.notify-version.outputs.version }}', inline: true }
-                              ]
-                            }]
-                          })
-                        });
-                      } else {
-                        const success = '${{ job.status }}' === 'success';
-                        await fetch(process.env.WEBHOOK_URL, {
-                          method: 'POST',
-                          headers: { 'Content-Type': 'application/json' },
-                          body: JSON.stringify({
-                            username: 'Pokedex CI/CD',
-                            avatar_url: '${{ env.DISCORD_AVATAR }}',
-                            embeds: [{
-                              title: success ? '✅ Deployment Successful' : '❌ Deployment Failed',
-                              color: success ? 5763719 : 15548997,
-                              fields: [
-                                { name: 'Version', value: '${{ steps.notify-version.outputs.version }}', inline: true },
-                                { name: 'Commit', value: '${{ steps.prepare.outputs.sha }}', inline: true },
-                                { name: 'Details', value: '[View Workflow](${{ steps.prepare.outputs.run_url }})', inline: false }
-                              ]
-                            }]
-                          })
-                        });
+                      if ('${{ job.status }}' !== 'success') {
+                        embed.fields.push(
+                          { name: 'Failed Job', value: '${{ needs.test.result || needs.deploy.result || needs.tag_release.result }}', inline: false }
+                        );
                       }
+
+                      await fetch(process.env.DISCORD_WEBHOOK, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                          username: 'Pokedex CI/CD',
+                          avatar_url: 'https://cdn-icons-png.flaticon.com/512/188/188987.png',
+                          embeds: [embed]
+                        })
+                      });
