--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,15 @@ jobs:
                   RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
                   RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
 
+            - name: Check the deployed service URL
+              uses: jtalk/url-health-check-action@v4
+              with:
+                  url: https://fullstackopen-part11-pokedex.onrender.com/
+                  follow-redirect: false
+                  max-attempts: 3
+                  retry-delay: 5s
+                  retry-all: false
+
     tag_release:
         if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
         needs: [test, deploy]
@@ -126,7 +135,6 @@ jobs:
                       const newTag = '${{ steps.version.outputs.new_tag }}' || 'latest';
 
                       const embed = {
-                        title: status === 'success' ? '🚀 A new version of Pokedex Deployed' : '❌ Build/Deployment Failed',
                         title: status === 'success' ? '🚀 A new version of Pokedex Deployed' : '❌ Build/Deployment Failed',
                         color: status === 'success' ? 65280 : 16711680,
                         fields: [
