--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
     pull_request:
         types: [closed]
         branches: [main]
+    schedule:
+        - cron: '0 0 * * *'
 
 jobs:
     test:
@@ -104,6 +106,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   DEFAULT_BUMP: patch
                   WITH_V: false
+
             - name: Create new tag if it doesn't exist
               if: env.tag_exists == 'false'
               run: |
@@ -113,7 +116,7 @@ jobs:
     notify:
         needs: [test, deploy, tag_release]
         runs-on: ubuntu-latest
-        if: always() # This ensures the job runs regardless of success/failure
+        if: always()
         steps:
             - name: Get workflow details
               id: workflow
@@ -138,36 +141,12 @@ jobs:
                         title: status === 'success' ? '🚀 A new version of Pokedex Deployed' : '❌ Build/Deployment Failed',
                         color: status === 'success' ? 65280 : 16711680,
                         fields: [
-                          {
-                            name: 'Status',
-                            value: status === 'success' ? 'Success' : 'Failed',
-                            inline: true
-                          },
-                          {
-                            name: 'Version',
-                            value: newTag,
-                            inline: true
-                          },
-                          {
-                            name: 'Deploy ID',
-                            value: deployId,
-                            inline: true
-                          },
-                          {
-                            name: 'Commit',
-                            value: `[${'${{ steps.workflow.outputs.sha }}'}](${'${{ steps.workflow.outputs.server_url }}'}/${'${{ steps.workflow.outputs.repo }}'}/commit/${'${{ github.sha }}'})`,
-                            inline: false
-                          },
-                          {
-                            name: 'PR',
-                            value: `#${'${{ steps.workflow.outputs.pr_number }}'}`,
-                            inline: true
-                          },
-                          {
-                            name: 'By',
-                            value: '${{ steps.workflow.outputs.actor }}',
-                            inline: true
-                          }
+                          { name: 'Status', value: status === 'success' ? 'Success' : 'Failed', inline: true },
+                          { name: 'Version', value: newTag, inline: true },
+                          { name: 'Deploy ID', value: deployId, inline: true },
+                          { name: 'Commit', value: `[${'${{ steps.workflow.outputs.sha }}'}](${'${{ steps.workflow.outputs.server_url }}'}/${'${{ steps.workflow.outputs.repo }}'}/commit/${'${{ github.sha }}'})`, inline: false },
+                          { name: 'PR', value: `#${'${{ steps.workflow.outputs.pr_number }}'}`, inline: true },
+                          { name: 'By', value: '${{ steps.workflow.outputs.actor }}', inline: true }
                         ],
                         timestamp: new Date().toISOString()
                       };
@@ -187,12 +166,44 @@ jobs:
 
                       await fetch(webhookUrl, {
                         method: 'POST',
-                        headers: {
-                          'Content-Type': 'application/json'
-                        },
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ username: 'Deployment Bot', avatar_url: 'https://cdn-icons-png.flaticon.com/512/2092/2092701.png', embeds: [embed] })
+                      });
+
+    health_check:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Health Check
+              id: ping
+              uses: Jtalk/url-health-check-action@v3
+              with:
+                  url: 'https://fullstackopen-part11-pokedex.onrender.com/'
+                  max-attempts: 3
+                  retry-delay: 10
+                  follow-redirect: true
+
+            - name: Send Health Check Result to Discord
+              uses: actions/github-script@v6
+              with:
+                  script: |
+                      const webhookUrl = '${{ secrets.DISCORD_WEBHOOK }}';
+                      const status = '${{ job.status }}';
+                      const embed = {
+                        title: status === 'success' ? '✅ Pokedex Health Check Passed' : '❌ Pokedex Health Check Failed',
+                        color: status === 'success' ? 65280 : 16711680,
+                        fields: [
+                          { name: 'Checked URL', value: 'https://fullstackopen-part11-pokedex.onrender.com/' },
+                          { name: 'Status', value: status === 'success' ? 'Up and running' : 'Service might be down' }
+                        ],
+                        timestamp: new Date().toISOString()
+                      };
+
+                      await fetch(webhookUrl, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({
-                          username: 'Deployment Bot',
-                          avatar_url: 'https://cdn-icons-png.flaticon.com/512/2092/2092701.png',
+                          username: 'Health Bot',
+                          avatar_url: 'https://cdn-icons-png.flaticon.com/512/5957/5957336.png',
                           embeds: [embed]
                         })
                       });
