--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,15 @@ jobs:
                   retry-delay: 5s
                   retry-all: false
 
+            - name: Check the deployed service URL
+              uses: jtalk/url-health-check-action@v4
+              with:
+                  url: https://fullstackopen-part11-pokedex.onrender.com/
+                  follow-redirect: false
+                  max-attempts: 3
+                  retry-delay: 5s
+                  retry-all: false
+
     tag_release:
         if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
         needs: [test, deploy]
@@ -97,6 +106,7 @@ jobs:
     notify:
         needs: [test, deploy, tag_release]
         runs-on: ubuntu-latest
+        if: always()
         if: always()
         steps:
             - name: Send Discord notification
