--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,17 +92,30 @@ jobs:
               with:
                   ref: ${{ github.event.pull_request.merge_commit_sha }}
                   fetch-depth: 0
-            - name: Get version from package.json
+            - name: Check if tag exists
+              id: tag_check
+              run: |
+                  TAG_EXISTS=$(git tag -l "v*")
+                  if [ -n "$TAG_EXISTS" ]; then
+                      echo "Tag v already exists. Skipping tag creation."
+                      echo "tag_exists=true" >> $GITHUB_ENV
+                  else
+                      echo "Tag v does not exist. Proceeding with tag creation."
+                      echo "tag_exists=false" >> $GITHUB_ENV
+              continue-on-error: true
+            - name: Bump version
+              if: env.tag_exists == 'false'
               id: version
+              uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  DEFAULT_BUMP: patch
+                  WITH_V: false
+            - name: Create new tag if it doesn't exist
+              if: env.tag_exists == 'false'
               run: |
-                  version=$(jq -r .version package.json)
-                  echo "version=$version" >> $GITHUB_OUTPUT
-            - name: Create Git tag
-              run: |
-                  git config --global user.name "GitHub Actions"
-                  git config --global user.email "actions@github.com"
-                  git tag -a v${{ steps.version.outputs.version }} -m "Release v${{ steps.version.outputs.version }}"
-                  git push origin v${{ steps.version.outputs.version }}
+                  git tag "v${{ steps.version.outputs.new_tag }}"
+                  git push origin "v${{ steps.version.outputs.new_tag }}"
 
     health_check:
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
