--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,7 +102,8 @@ jobs:
                   else
                       echo "Tag v does not exist. Proceeding with tag creation."
                       echo "tag_exists=false" >> $GITHUB_ENV
-              continue-on-error: true
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Bump version
               if: env.tag_exists == 'false'
               id: version
