Health check deployment (#50)
* Exercises 11.19-11.21

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Pokedex App Health Monitor

* Remove health-check.yml

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* More on deployment

* Health check deployment

* Health check deployment

* Health check deployment

* health-check-deployment

* Health check deployment

* Health check deployment

* Health check deployments

* Health check deployments

* Health check deployments

* Health check deployments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,6 +102,10 @@ jobs:
                   else
                       echo "Tag v does not exist. Proceeding with tag creation."
                       echo "tag_exists=false" >> $GITHUB_ENV
+
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
               continue-on-error: true
             - name: Bump version
               if: env.tag_exists == 'false'
